--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -20,11 +20,6 @@ B2mmYr=未找到命令 '$cmd_name'
 # ●=exiterr@263
 DHeim3=未找到命令 '$cmd_name' 的元数据
 
-# ■=bin/deb/init_debian.sh
-# ◆=install_docker
-# ●=info@25
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
-
 # ■=bin/i18n.sh
 # ◆=load_lang_files
 # ●=info@32
@@ -78,13 +73,10 @@ D6sy7g=请输入语言参数，如 --lang={0}
 # ◆=configure_sshd
 # ●=info@151
 Dj3cJb=sshd is not installed, installing now...
-# ●=info@166
+# ●=info@164
 BLGrby=SSH configuration has been applied
-# ●=warning@168
+# ●=warning@166
 Dq9sXa=systemctl restart {} failed, please execute manually
-# ◆=install_docker
-# ●=info@185
-BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -113,33 +105,46 @@ Aw3y8l={0} 语言文件已创建
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-# ●=string@38
-DtZJ4v=Automatically installing {} ...
-# ●=success@49
+# ●=success@89
 DeH9WO={} installation successful
-# ●=exiterr@55
+# ●=warning@92
+Afthz4={} installation successful, but service is not running
+# ●=exiterr@98
 Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 # ◆=monitor_progress
-# ●=string@114
+# ●=string@191
 ATkIIM=Monitoring process {}...
-# ●=_mf@146
+# ●=_mf@223
 APOzfr=Completed
-# ◆=user_file_permit
-# ●=string@194
-BHeYRA={} ownership changed to {}
 
-# ■=lib/docker.sh
-# ◆=show_notice
-# ●=_mf@22
-A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
-# ◆=infra_setup
-# ●=info@154
-Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
+# ■=lib/docker_install.sh
+# ◆=check_docker
+# ●=exiterr@25
+DpkDjV=Docker installation failure
+# ●=exiterr@33
+DF9QGO=Docker Compose installation failure，please try manual installation \
+Github Path: {}
+# ●=string@37
+CtWNt-=Docker ({}) and Docker Compose ({}) are installed
+# ◆=remove_docker_apt
+# ●=string@45
+BuNCex=Uninstalling {}...
+# ◆=install_docker_apt
+# ●=info@89
+BeYkE4=Installing Docker and Docker Compose on {}...
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 # ●=exiterr@40
 BzOdCD=JSON format error
+
+# ■=lib/lang_utils.sh
+# ◆=reset_user_locale
+# ●=_mf@200
+BBDesN=Change script language from [{}] to [{}]?
+# ◆=initial_language
+# ●=string@231
+DAOaEc=set LANG to {}
 
 # ■=lib/network.sh
 # ◆=cat_footer
@@ -166,7 +171,7 @@ AVcfZk=Unknown network manager. Unable to configure static IP
 
 # ■=lib/python_bridge.sh
 # ◆=sh_clear_cache
-# ●=exiterr@40
+# ●=exiterr@55
 BSEB2I=Python executable file {} does not exist
 
 # ■=lib/python_install.sh
@@ -218,133 +223,160 @@ D6gi9n=Python {} installation completed
 # ◆=install_py_venv
 # ●=_mf@266
 Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
-# ●=_mf@272
+# ●=_mf@271
 C_9sLZ=Current pip mirror:
+# ●=_mf@275
+COL4X1=Reinstall pip and the required Python libraries?
 # ●=_mf@276
-BJVBQG={}Reinstall pip and the required Python libraries?
-# ●=_mf@277
 AoE5L8=Skipping virtual environment creation
-# ●=info@280
+# ●=info@279
 6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
-# ●=info@299
+# ●=info@298
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
-# ●=success@301
+# ●=success@300
 DC8V8Z=Virtual environment created successfully
-# ●=exiterr@304
+# ●=exiterr@303
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
-# ●=_mf@320
+# ●=_mf@319
 D6vb-V=upgrade success
-# ●=_mf@322
+# ●=_mf@321
 AGg8Fk=upgrade failure
 # ◆=install_packages
-# ●=_mf@339
+# ●=_mf@338
 DOoYYE=install success
-# ●=_mf@341
+# ●=_mf@340
 DaZ4fT=install failure
 # ◆=show_pip_mirrors
-# ●=_mf@373
+# ●=_mf@372
 C6JrUi=Index
-# ●=_mf@373
+# ●=_mf@372
 B5VRns=Mirror Name
-# ●=_mf@373
+# ●=_mf@372
 AT1vWp=URL Address
-# ●=_mf@373
+# ●=_mf@372
 AOKnr4=Time
-# ●=_mf@387
+# ●=_mf@386
 BrbGjI=Fastest Mirror
-# ●=_mf@389
+# ●=_mf@388
 BMhBIw=Response Time
-# ●=_mf@395
+# ●=_mf@394
 BclW-G=Failed Mirrors
-# ●=_mf@407
+# ●=_mf@406
 AOlJ5P=Status
 # ◆=do_choose_pip_mirror
-# ●=string@440
+# ●=string@439
 Dz9vrd=Configuration canceled. Keeping current settings
-# ●=_mf@465
+# ●=_mf@464
 B4r_eA=Pip has been configured to use the new mirror
-# ●=_mf@466
+# ●=_mf@465
 AoQOEG=Mirror
-# ●=_mf@467
+# ●=_mf@466
 Bovsx6=Trusted Host
 # ◆=choose_pip_mirror
-# ●=warning@433
+# ●=warning@432
 D1ECQh=No available mirrors found. Please check your network connection.
-# ●=_mf@485
+# ●=_mf@484
 CIq9J2=Please select a mirror to use. Enter 0 to skip
-# ●=_mf@489
+# ●=_mf@488
 ClNNly=Invalid input! Please enter a number between 0 and {}
-# ●=_mf@490
+# ●=_mf@489
 BEMgXg=Skipping mirror selection
 # ◆=create_py_venv
-# ●=_mf@502
+# ●=_mf@501
 DLX7Eq=Testing global pip mirror speeds...
-
-# ■=lib/read_util.sh
-# ◆=action_handler
-# ●=string@21
-Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-# ●=string@30
-BjJxaz=Invalid input! Please enter a number
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
-# ●=_mf@60
+# ●=_mf@65
 A0d5Uw=Command execution timeout
-# ●=_mf@64
+# ●=_mf@70
 CfCUw1=Command execution error
 # ◆=cmd_ex_be
-# ●=_mf@128
+# ●=_mf@135
 D69JIa=Executing
 # ◆=monitor_progress
-# ●=string@167
+# ●=string@174
 ATkIIM=Monitoring process {}...
-# ●=_mf@213
+# ●=_mf@220
 APOzfr=Completed
-# ●=_mf@221
+# ●=_mf@228
 DOkop1=Ctrl+C detected, terminating background subprocesses...
-# ●=string@227
+# ●=string@234
 CWtyq8=Script interrupted and subprocesses cleaned up
 # ◆=pm_refresh
-# ●=string@250
+# ●=string@257
 BeW7RD=Refreshing cache...
-# ●=info@254
+# ●=info@261
 Aq5CFQ=Cache refresh completed
 # ◆=pm_upgrade
-# ●=string@268
+# ●=string@275
 Cq_00C=Updating system...
-# ●=info@272
+# ●=info@279
 D2hEpl=System update completed
 # ◆=pm_install
-# ●=string@289
+# ●=string@296
 BQmsyM=Installing {}...
-# ●=info@293
+# ●=info@300
 DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
 # ◆=run_command
 # ●=string@27
 DWA16R=Failed to execute command: {}
+# ◆=do_configure_sshd_port
+# ●=_mf@127
+AcZ5l2=SSH port set to
+# ◆=do_configure_sshd_root
+# ●=_mf@147
+DqyvG8=root login allowed
+# ●=_mf@150
+DVkFEN=root login disabled
 # ◆=configure_sshd
 # ●=error@97
 D6wN7B=SSH configuration file {} does not exist
-# ●=_mf@110
-DqyvG8=root login allowed
-# ●=_mf@110
-DVkFEN=root login disabled
 # ●=string@111
 AZKZT4=Current SSH is running on Port {}, {}
 # ●=_mf@112
 BNOqlk=Would you like to reconfigure it?
-# ●=_mf@125
+# ●=_mf@131
 DzCitM=Enter new SSH port (current: {}): 
-# ●=_mf@126
+# ●=_mf@132
 ARXwDI=Failed to set SSH port
-# ●=_mf@138
-AcZ5l2=SSH port set to
-# ●=_mf@143
+# ●=_mf@154
 D6jDYn=Allow root login via SSH?
+
+# ■=python/docker/docker_install.py
+# ◆=get_official_version
+# ●=string@126
+A_YhNO=Error fetching official version from {}
+# ◆=install_check
+# ●=_mf@142
+DPoN-q=Do you want to re-install Docker?
+# ●=string@144
+CWj1nj=Docker version {} is installed and running
+# ●=warning@149
+BYPpAu=Docker requires version {}+, now it's {}
+# ◆=install_choose
+# ●=_mf@157
+CedoFo=Install system-provided Docker
+# ●=_mf@158
+ACWfb3=Install official-provided Docker
+# ●=info@167
+DGT8WM=Requires Docker version {}+, {} only supports {}
+# ●=_mf@169
+BK01mS=Version
+# ●=_mf@199
+ATAAW5=Please select a version to install (1-{}). Enter 0 to skip:
+# ●=warning@202
+DC-00j=Skip Docker installation
+
+# ■=python/docker/docker_run.py
+# ◆=run
+# ●=string@125
+AgozfB=\nPlease select the Docker infrastructure components to enable (multiple choices allowed): 
+# ●=string@127
+AN05my=\nnPlease select the Docker applications to enable (multiple choices allowed): 
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -413,58 +445,58 @@ Be_6w4=Action cancelled. File deletion aborted
 
 # ■=python/mirror/linux_speed.py
 # ◆=fetch_mirror_list
-# ●=string@98
+# ●=string@99
 B6R_HD={} Mirror Speed Testing Tool
-# ●=string@109
+# ●=string@110
 AeQJal=Failed to fetch the mirror list: {}
 # ◆=test_all_mirrors
-# ●=string@212
+# ●=string@213
 CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
-# ●=_mf@238
+# ●=_mf@239
 DnXJti=Progress
-# ●=string@274
+# ●=string@275
 AvNok2=Ctrl+C detected, stopping remaining tasks...
-# ●=string@294
+# ●=string@295
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=do_choose_mirror
-# ●=string@328
+# ●=string@329
 DhCuAq=Configuration cancelled, keeping current settings
-# ●=_mf@334
-Cph1R3=You selected
 # ●=_mf@335
+Cph1R3=You selected
+# ●=_mf@336
 C68uzc=Download speed
 # ◆=choose_mirror
-# ●=string@321
+# ●=string@322
 CCGCmP=No available mirrors found
-# ●=string@348
+# ●=string@349
 Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
-# ●=_mf@349
-BiFkf4=Please enter your choice (0-{}): 
 # ●=_mf@350
+BiFkf4=Please enter your choice (0-{}): 
+# ●=_mf@351
 CvE-z3=Invalid input! Please enter a number between 0-{}
 # ◆=print_results
-# ●=_mf@359
+# ●=_mf@366
 AOAev1=Rank
-# ●=_mf@359
+# ●=_mf@366
 Ah5sGh=Speed(KB/s)
-# ●=_mf@359
+# ●=_mf@366
 CD_dye=Resp Time(s)
-# ●=_mf@359
+# ●=_mf@366
 A03XzI=Succ Rate
-# ●=_mf@359
+# ●=_mf@366
 CZk3S6=Country/Region
-# ●=_mf@359
+# ●=_mf@366
 AyPHP9=Mirror URL
 # ◆=run
-# ●=string@374
+# ●=string@381
 Dsnlq3=Could not find the {} source configuration file
-# ●=_mf@378
+# ●=_mf@385
 AD12ND=Would you like to reselect a mirror?
-# ●=string@380
+# ●=string@387
 D6k0Xl=Current {} mirror: {}
-# ●=string@388
+# ●=string@394
 D4jlM5=An error occurred during program execution: {}
-# ●=_mf@396
+# ●=_mf@402
 AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/mirror/linux_speed_arch.py
@@ -482,37 +514,48 @@ BQVoKn=Please select a country/region code (press Enter to use the default '{}')
 
 # ■=python/network_util.py
 # ◆=valid_setup_octet
-# ●=string@137
+# ●=string@180
 BteKhj=The input must be between 1 and 255
-# ●=string@141
+# ●=string@184
 D4k_4H=The static IP address cannot be the same as the gateway
 # ◆=setup_octet
-# ●=string@132
+# ●=string@175
 CPwsn7=The current IP address is invalid
-# ●=_mf@146
-CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
-# ◆=fix_ip
-# ●=info@176
-B41yVK={} Cloud servers do not require a static IP
-# ●=_mf@183
-CYYp0S=Server is configured with a static IP
-# ●=_mf@186
-D6UA5B=Server may be configured with a static IP
 # ●=_mf@189
+CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
+# ◆=configure_nw
+# ●=info@223
+B41yVK={} Cloud servers do not require a static IP
+# ●=_mf@230
+CYYp0S=Server is configured with a static IP
+# ●=_mf@233
+D6UA5B=Server may be configured with a static IP
+# ●=_mf@236
 Cp93zR=Server is configured with a dynamic IP
-# ●=string@191
+# ●=string@238
 AzA-3k=Server may be configured with a dynamic IP
-# ●=_mf@193
+# ●=_mf@240
 CCY-S1=Would you like to adjust it?
-# ●=_mf@194
+# ●=_mf@241
 C2TtcR=Do not modify the network configuration
 
-# ■=python/read_util.py
-# ◆=action_handler
-# ●=string@38
-Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-# ●=string@49
-BjJxaz=Invalid input! Please enter a number
+# ■=python/read_multi_util.py
+# ◆=print_tips
+# ●=_mf@35
+BdMwjn=Multiple choice format like 1 2 3; selecting the same item again will deselect it; press Enter to finish
+# ◆=print_current_selection
+# ●=_mf@43
+ANwTZ5=None
+# ●=_mf@44
+AGPu6_=Current selection
+# ◆=toggle_selection
+# ●=_mf@67
+DmgGjB=Deselected
+# ◆=multiple_selector
+# ●=string@90
+B0JrED=✘ Please enter a valid number (1-{})
+# ●=string@103
+DnNBxU=✘ Invalid number: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
