--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,7 +9,7 @@
 config:
   project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-07-09 15:14:10'
+  changed: '2025-07-16 12:08:38'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -26,122 +26,114 @@ config:
     shell: sh
     python: py
   stats: # auto-generated, DO NOT UPDATE
-    file_nos: 53
-    zh: {count: 225}
-    en: {count: 225}
+    file_nos: 57
+    zh: {count: 241}
+    en: {count: 241}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
-  bin/deb/init_debian.sh:
-    type: shell
-    djb2_len: 20
-    created: '2025-04-30 19:08:34'
-    changed: '2025-07-09 15:14:10'
-    stats:
-      zh: {count: 1, start: 17, end: 19}
-      en: {count: 1, start: 17, end: 19}
   bin/i18n.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 17, start: 21, end: 51}
-      en: {count: 17, start: 21, end: 51}
+      zh: {count: 17, start: 17, end: 47}
+      en: {count: 17, start: 17, end: 47}
   bin/init_main.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 4, start: 53, end: 59}
-      en: {count: 4, start: 53, end: 59}
+      zh: {count: 3, start: 49, end: 53}
+      en: {count: 3, start: 49, end: 53}
   bin/test_lang.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 7, start: 61, end: 77}
-      en: {count: 7, start: 61, end: 77}
+      zh: {count: 7, start: 55, end: 71}
+      en: {count: 7, start: 55, end: 71}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 6, start: 79, end: 88}
-      en: {count: 6, start: 79, end: 88}
-  lib/docker.sh:
+      zh: {count: 5, start: 73, end: 80}
+      en: {count: 5, start: 73, end: 80}
+  lib/docker_install.sh:
     type: shell
     djb2_len: 20
-    created: '2025-06-12 18:10:50'
-    changed: '2025-07-09 15:14:10'
+    created: '2025-07-11 20:27:28'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 2, start: 90, end: 94}
-      en: {count: 2, start: 90, end: 94}
+      zh: {count: 5, start: 82, end: 91}
+      en: {count: 5, start: 82, end: 91}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 1, start: 96, end: 98}
-      en: {count: 1, start: 96, end: 98}
+      zh: {count: 1, start: 93, end: 95}
+      en: {count: 1, start: 93, end: 95}
+  lib/lang_utils.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-07-10 11:53:34'
+    changed: '2025-07-16 12:08:38'
+    stats:
+      zh: {count: 2, start: 97, end: 101}
+      en: {count: 2, start: 97, end: 101}
   lib/network.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 9, start: 100, end: 112}
-      en: {count: 9, start: 100, end: 112}
+      zh: {count: 9, start: 103, end: 115}
+      en: {count: 9, start: 103, end: 115}
   lib/python_bridge.sh:
     type: shell
     djb2_len: 20
     created: '2025-07-03 15:41:25'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 1, start: 114, end: 116}
-      en: {count: 1, start: 114, end: 116}
+      zh: {count: 1, start: 117, end: 119}
+      en: {count: 1, start: 117, end: 119}
   lib/python_install.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 49, start: 118, end: 179}
-      en: {count: 49, start: 118, end: 179}
-  lib/read_util.sh:
-    type: shell
-    djb2_len: 20
-    created: '2025-05-08 23:37:21'
-    changed: '2025-07-09 15:14:10'
-    stats:
-      zh: {count: 2, start: 181, end: 184}
-      en: {count: 2, start: 181, end: 184}
+      zh: {count: 49, start: 121, end: 182}
+      en: {count: 49, start: 121, end: 182}
   python/cmd_handler.py:
     type: python
     djb2_len: 20
     created: '2025-06-24 19:02:02'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 13, start: 186, end: 205}
-      en: {count: 13, start: 186, end: 205}
+      zh: {count: 13, start: 184, end: 203}
+      en: {count: 13, start: 184, end: 203}
   python/config_sshd.py:
     type: python
     djb2_len: 20
     created: '2025-07-04 15:10:23'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 10, start: 207, end: 219}
-      en: {count: 10, start: 207, end: 219}
+      zh: {count: 10, start: 205, end: 219}
+      en: {count: 10, start: 205, end: 219}
   python/configure_sshd.py:
     type: python
     djb2_len: 20
@@ -150,22 +142,38 @@ file:
     stats:
       zh: {count: 11, start: 213, end: 226}
       en: {count: 11, start: 213, end: 226}
+  python/docker/docker_install.py:
+    type: python
+    djb2_len: 20
+    created: '2025-07-11 20:27:28'
+    changed: '2025-07-16 12:08:38'
+    stats:
+      zh: {count: 10, start: 221, end: 234}
+      en: {count: 10, start: 221, end: 234}
+  python/docker/docker_run.py:
+    type: python
+    djb2_len: 20
+    created: '2025-07-16 11:32:52'
+    changed: '2025-07-16 12:08:38'
+    stats:
+      zh: {count: 2, start: 236, end: 239}
+      en: {count: 2, start: 236, end: 239}
   python/file_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 15, start: 221, end: 241}
-      en: {count: 15, start: 221, end: 241}
+      zh: {count: 15, start: 241, end: 261}
+      en: {count: 15, start: 241, end: 261}
   python/i18n.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 10, start: 243, end: 259}
-      en: {count: 10, start: 243, end: 259}
+      zh: {count: 10, start: 263, end: 279}
+      en: {count: 10, start: 263, end: 279}
   python/lang_server.py:
     type: python
     djb2_len: 20
@@ -186,47 +194,47 @@ file:
     type: python
     djb2_len: 20
     created: '2025-06-27 11:29:05'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 24, start: 261, end: 291}
-      en: {count: 24, start: 261, end: 291}
+      zh: {count: 24, start: 281, end: 311}
+      en: {count: 24, start: 281, end: 311}
   python/mirror/linux_speed_arch.py:
     type: python
     djb2_len: 20
     created: '2025-06-30 23:02:22'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 1, start: 293, end: 295}
-      en: {count: 1, start: 293, end: 295}
+      zh: {count: 1, start: 313, end: 315}
+      en: {count: 1, start: 313, end: 315}
   python/mirror/linux_speed_ubt.py:
     type: python
     djb2_len: 20
     created: '2025-07-08 10:23:09'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 2, start: 297, end: 301}
-      en: {count: 2, start: 297, end: 301}
+      zh: {count: 2, start: 317, end: 321}
+      en: {count: 2, start: 317, end: 321}
   python/network_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 18:20:21'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 11, start: 303, end: 317}
-      en: {count: 11, start: 303, end: 317}
-  python/read_util.py:
+      zh: {count: 11, start: 323, end: 337}
+      en: {count: 11, start: 323, end: 337}
+  python/read_multi_util.py:
     type: python
     djb2_len: 20
-    created: '2025-07-07 20:04:24'
-    changed: '2025-07-09 15:14:10'
+    created: '2025-07-16 09:02:54'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 2, start: 319, end: 322}
-      en: {count: 2, start: 319, end: 322}
+      zh: {count: 6, start: 339, end: 349}
+      en: {count: 6, start: 339, end: 349}
   python/test_lang.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-07-09 15:14:10'
+    changed: '2025-07-16 12:08:38'
     stats:
-      zh: {count: 2, start: 324, end: 329}
-      en: {count: 2, start: 324, end: 329}
+      zh: {count: 2, start: 351, end: 356}
+      en: {count: 2, start: 351, end: 356}
